--- a/.github/workflows/one-time-password.yml
+++ b/.github/workflows/one-time-password.yml
@@ -36,14 +36,14 @@ jobs:
         with:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: 'latest'
-      - name: Freeze
-        run: cabal freeze
+      - name: Configure
+        run: ./.github/workflows/install-libsodium.sh
       - name: Cache
         uses: actions/cache@v3.3.2
         with:
           path: ${{ steps.setup-haskell.outputs.cabal-store }}
-          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('cabal.project.freeze') }}
-          restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
+          key: ${{ runner.os }}-ghc-${{ matrix.ghc }}-cabal-${{ hashFiles('**/plan.json') }}
+          restore-keys: ${{ runner.os }}-ghc-${{ matrix.ghc }}-
       - name: Build
         run: cabal build
       - name: Test
