--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -37,38 +37,38 @@ common ghc-options
     -fdicts-strict -fmax-worker-args=16 -fspec-constr-recursive=16
     -Wunused-packages
 
-library
-  import:           ghc-options
   default-language: GHC2021
-  hs-source-dirs:   src
-  exposed-modules:  OTP
+
+library
+  import:          ghc-options
+  hs-source-dirs:  src
+  exposed-modules: OTP
   build-depends:
     , base        >=4.16 && <5
     , bytestring
     , cereal
+    , chronos     ^>=1.1
     , sel
-    , time        >=1.1
 
-  ghc-options:      -Wall
+  ghc-options:     -Wall
 
 test-suite tests
   import:             ghc-options
-  default-language:   GHC2021
   type:               exitcode-stdio-1.0
   hs-source-dirs:     test
-  ghc-options:        -Wall
   default-extensions: OverloadedStrings
   main-is:            Test.hs
   other-modules:
     Test.HOTP
     Test.TOTP
+    Test.Utils
 
   build-depends:
     , base               >=4.16 && <5
     , bytestring
+    , chronos
     , one-time-password
     , sel
     , tasty
     , tasty-hunit
     , text
-    , time               >=1.1
