Revamp totp counter and add tests

--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -49,6 +49,7 @@ library
     , cereal
     , chronos     ^>=1.1
     , sel
+    , torsor      ^>=0.1
 
   ghc-options:     -Wall
 
@@ -72,3 +73,4 @@ test-suite tests
     , tasty
     , tasty-hunit
     , text
+    , torsor
