--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -44,12 +44,14 @@ library
   hs-source-dirs:  src
   exposed-modules: OTP
   build-depends:
-    , base        >=4.16 && <5
+    , base          >=4.16 && <5
     , bytestring
     , cereal
-    , chronos     ^>=1.1
+    , chronos       ^>=1.1
     , sel
-    , torsor      ^>=0.1
+    , text          ^>=2.0
+    , text-display  ^>=0.0
+    , torsor        ^>=0.1
 
   ghc-options:     -Wall
 
@@ -72,4 +74,5 @@ test-suite tests
     , tasty
     , tasty-hunit
     , text
+    , text-display
     , torsor
