--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -22,7 +22,7 @@ extra-source-files:
   CHANGELOG.md
   README.md
 
-tested-with:        GHC ==9.2.8 || ==9.4.8 || ==9.6.3
+tested-with:        GHC ==9.4.8 || ==9.6.3
 
 source-repository head
   type:     git
