--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -51,10 +51,11 @@ library
 
   build-depends:
     , base             >=4.16  && <5
-    , bytestring
-    , cereal
+    , bytestring       ^>=0.11
+    , cereal           ^>=0.5
     , chronos          ^>=1.1
     , cryptohash-sha1  ^>=0.11
+    , network-uri      ^>=2.6
     , sel
     , text             ^>=2.0
     , text-display     ^>=0.0
