--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -76,6 +76,7 @@ test-suite tests
 
   build-depends:
     , base               >=4.16 && <5
+    , base32             ^>=0.4
     , chronos
     , one-time-password
     , sel
