Introduce property testing

--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -70,18 +70,24 @@ test-suite tests
   default-extensions: OverloadedStrings
   main-is:            Test.hs
   other-modules:
+    Test.Comparison
     Test.HOTP
+    Test.Properties
     Test.TOTP
     Test.Utils
 
   build-depends:
     , base               >=4.16 && <5
+    , base16
     , base32             ^>=0.4
+    , bytestring
     , chronos
+    , cryptonite
     , one-time-password
     , sel
     , tasty
     , tasty-hunit
+    , tasty-quickcheck
     , text
     , text-display
     , torsor
