feature: add CLI

--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -85,3 +85,42 @@ test-suite tests
     , text
     , text-display
     , torsor
+
+executable one-time-password
+  -- type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs: app
+  default-extensions:
+      DataKinds
+      DefaultSignatures
+      DeriveAnyClass
+      DeriveGeneric
+      DerivingStrategies
+      DerivingVia
+      DuplicateRecordFields
+      FlexibleContexts
+      GADTs
+      GeneralizedNewtypeDeriving
+      KindSignatures
+      LambdaCase
+      OverloadedRecordDot
+      OverloadedStrings
+      RankNTypes
+      RecordWildCards
+      ScopedTypeVariables
+      TypeApplications
+      TypeFamilies
+      TypeOperators
+
+  build-depends:
+    , base                 >=4.16 && <5
+    , bytestring
+    , chronos
+    , one-time-password
+    , optparse-applicative >=0.15 && <0.19
+    , sel
+    , text
+    , text-display
+    , torsor
+
+  ghc-options:     -Wall
