Rework the README and cabal file

--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -9,9 +9,9 @@ description:
 
 license:            MIT
 license-file:       LICENSE
-copyright:          (c) 2012 Artem Leshchev, 2016 Aleksey Uimanov
-author:             Artem Leshchev, Aleksey Uimanov
-maintainer:         The Haskell Cryptography contributors
+copyright:          (c) 2023 The Haskell Cryptography Group
+author:             Hécate Moonlight
+maintainer:         The Haskell Cryptography Group contributors
 homepage:           https://github.com/haskell-cryptography/one-time-password
 bug-reports:
   https://github.com/haskell-cryptography/one-time-password/issues
@@ -50,7 +50,7 @@ library
     OTP.TOTP
 
   build-depends:
-    , base             >=4.16  && <5
+    , base             >=4.17  && <5
     , bytestring       ^>=0.11
     , cereal           ^>=0.5
     , chronos          ^>=1.1
