--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -13,7 +13,7 @@ jobs:
 
     - uses: haskell-actions/run-fourmolu@v9
       with:
-        version: "0.12.0.0"
+        version: "0.14.1.0"
         pattern: |
           src/**/*.hs
           test/**/*.hs
@@ -25,6 +25,8 @@ jobs:
 
     - name: 'Set up HLint'
       uses: haskell-actions/hlint-setup@v2
+      with:
+        version: '3.8'
 
     - name: 'Run HLint'
       uses: haskell-actions/hlint-run@v2
