--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -1,4 +1,4 @@
-cabal-version:      3.0
+cabal-version:      3.4
 name:               one-time-password
 version:            3.0.0.0
 synopsis:           HMAC-Based and Time-Based One-Time Passwords
@@ -22,7 +22,7 @@ extra-source-files:
   CHANGELOG.md
   README.md
 
-tested-with:        GHC ==9.4.8 || ==9.6.3
+tested-with:        GHC ==9.4.8 || ==9.6.4 || ==9.8.2
 
 source-repository head
   type:     git
@@ -59,7 +59,6 @@ library
     , sel
     , text             ^>=2.0
     , text-display     ^>=0.0
-    , torsor           ^>=0.1
 
   ghc-options:     -Wall
 
@@ -94,6 +93,7 @@ test-suite tests
 
 executable one-time-password
   -- type: exitcode-stdio-1.0
+  import:             ghc-options
   main-is:            Main.hs
   hs-source-dirs:     app
   default-extensions:
@@ -129,4 +129,5 @@ executable one-time-password
     , text-display
     , torsor
 
+  other-modules:      Paths_one_time_password
   ghc-options:        -Wall
