--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -18,10 +18,8 @@ bug-reports:
 
 category:           Cryptography
 build-type:         Simple
-extra-source-files:
-  CHANGELOG.md
-  README.md
-
+extra-source-files: README.md
+extra-doc-files:    CHANGELOG.md
 tested-with:        GHC ==9.4.8 || ==9.6.4 || ==9.8.2
 
 source-repository head
@@ -50,13 +48,13 @@ library
     OTP.TOTP
 
   build-depends:
-    , base             >=4.17  && <5
+    , base             >=4.17   && <5
     , bytestring       ^>=0.11
     , cereal           ^>=0.5
     , chronos          ^>=1.1.6
     , cryptohash-sha1  ^>=0.11
     , network-uri      ^>=2.6
-    , sel
+    , sel              ^>=0.0
     , text             ^>=2.1
     , text-display     ^>=0.0
 
@@ -126,7 +124,8 @@ executable one-time-password
     , sel
     , text
     , text-display
-    , torsor
+    , torsor                ^>=0.1
 
   other-modules:      Paths_one_time_password
+  autogen-modules:      Paths_one_time_password
   ghc-options:        -Wall
