--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -55,7 +55,7 @@ library
     , cryptohash-sha1  ^>=0.11
     , network-uri      ^>=2.6
     , sel              ^>=0.0
-    , text             ^>=2.1
+    , text             >=2.0    && <2.2
     , text-display     ^>=0.0
 
   ghc-options:     -Wall
