Switch to crypton

--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -79,7 +79,7 @@ test-suite tests
     , base32             ^>=0.4
     , bytestring
     , chronos
-    , cryptonite
+    , crypton
     , one-time-password
     , sel
     , tasty
@@ -127,5 +127,5 @@ executable one-time-password
     , torsor                ^>=0.1
 
   other-modules:      Paths_one_time_password
-  autogen-modules:      Paths_one_time_password
+  autogen-modules:    Paths_one_time_password
   ghc-options:        -Wall
