--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -54,9 +54,10 @@ library
     , chronos          ^>=1.1.6
     , cryptohash-sha1  ^>=0.11
     , network-uri      ^>=2.6
-    , sel              ^>=0.0.2
+    , sel              >=0.0.2.0
     , text             >=2.0
-    , text-display     ^>=0.0
+    , text-display     ^>=1.0
+    , text-builder-linear >=0.1
 
   ghc-options:     -Wall
 
@@ -76,7 +77,7 @@ test-suite tests
   build-depends:
     , base               >=4.17 && <5
     , base16
-    , base32             ^>=0.4
+    , base32             >=0.4
     , bytestring
     , chronos
     , cryptonite
