--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -20,7 +20,7 @@ category:           Cryptography
 build-type:         Simple
 extra-source-files: README.md
 extra-doc-files:    CHANGELOG.md
-tested-with:        GHC ==9.4.8 || ==9.6.4 || ==9.8.2
+tested-with:        GHC ==9.4.8 || ==9.6.4 || ==9.8.2 || ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2
 
 source-repository head
   type:     git
