--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -20,7 +20,14 @@ category:           Cryptography
 build-type:         Simple
 extra-source-files: README.md
 extra-doc-files:    CHANGELOG.md
-tested-with:        GHC ==9.4.8 || ==9.6.4 || ==9.8.2 || ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2
+tested-with:
+  GHC ==9.4.8
+   || ==9.6.4
+   || ==9.6.7
+   || ==9.8.2
+   || ==9.8.4
+   || ==9.10.2
+   || ==9.12.2
 
 source-repository head
   type:     git
@@ -48,16 +55,16 @@ library
     OTP.TOTP
 
   build-depends:
-    , base             >=4.17   && <5
-    , bytestring       ^>=0.12
-    , cereal           ^>=0.5
-    , chronos          ^>=1.1.6
-    , cryptohash-sha1  ^>=0.11
-    , network-uri      ^>=2.6
-    , sel              >=0.1.0.0
-    , text             >=2.0
-    , text-display     ^>=1.0
-    , text-builder-linear >=0.1
+    , base                 >=4.17    && <5
+    , bytestring           ^>=0.12
+    , cereal               ^>=0.5
+    , chronos              ^>=1.1.6
+    , cryptohash-sha1      ^>=0.11
+    , network-uri          ^>=2.6
+    , sel                  >=0.1.0.0
+    , text                 >=2.0
+    , text-builder-linear  >=0.1
+    , text-display         ^>=1.0
 
   ghc-options:     -Wall
 
@@ -128,5 +135,5 @@ executable one-time-password
     , torsor                ^>=0.1
 
   other-modules:      Paths_one_time_password
-  autogen-modules:      Paths_one_time_password
+  autogen-modules:    Paths_one_time_password
   ghc-options:        -Wall
