--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -31,7 +31,7 @@ tested-with:
 
 source-repository head
   type:     git
-  location: git://github.com/haskell-cryptography/one-time-password.git
+  location: https://github.com/haskell-cryptography/one-time-password.git
 
 common ghc-options
   ghc-options:
