--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -21,16 +21,12 @@ build-type:         Simple
 extra-source-files: README.md
 extra-doc-files:    CHANGELOG.md
 tested-with:
-  GHC ==9.4.8
-   || ==9.6.4
-   || ==9.6.7
-   || ==9.8.2
-   || ==9.8.4
-   || ==9.10.2
+  GHC ==9.4.8 || ==9.6.4 || ==9.6.7 || ==9.8.2 || ==9.8.4 || ==9.10.2
 
 source-repository head
   type:     git
-  location: https://github.com/haskell-cryptography/one-time-password.git
+  location:
+    https://github.com/haskell-cryptography/one-time-password.git
 
 common ghc-options
   ghc-options:
@@ -54,7 +50,7 @@ library
     OTP.TOTP
 
   build-depends:
-    , base                 >=4.17    && <5
+    , base                 >=4.17   && <5
     , bytestring           ^>=0.12
     , cereal               ^>=0.5
     , chronos              ^>=1.1.6
