Use homebrew and pkg-config depending on the OS

--- a/.github/workflows/one-time-password.yml
+++ b/.github/workflows/one-time-password.yml
@@ -30,23 +30,34 @@ jobs:
     steps:
       - name: Checkout base repo
         uses: actions/checkout@v4
+
       - name: Set up Haskell
         id: setup-haskell
         uses: haskell-actions/setup@v2
         with:
           ghc-version: ${{ matrix.ghc }}
           cabal-version: 'latest'
+
       - name: Configure
         run: | 
           ./.github/workflows/install-libsodium.sh
           cabal freeze
+
       - name: Cache
         uses: actions/cache@v4
         with:
           path: ${{ steps.setup-haskell.outputs.cabal-store }}
           key: ${{ runner.os }}-ghc-${{ matrix.ghc }}-cabal-${{ hashFiles('**/plan.json') }}
           restore-keys: ${{ runner.os }}-ghc-${{ matrix.ghc }}-
-      - name: Build
-        run: cabal build
-      - name: Test
-        run: cabal test
+
+      - name: Test with homebrew on macOS
+        if: ${{ matrix.os == 'macos-latest' }}
+        run: |
+          cabal build --project-file=cabal.homebrew.project -v2 all
+          cabal test --project-file=cabal.homebrew.project all
+
+      - name: Test with pkg-config
+        if: ${{ matrix.os == 'ubuntu-latest' }}
+        run: |
+          cabal build --project-file=cabal.pkg-config.project -v2 all
+          cabal test --project-file=cabal.pkg-config.project all
