--- a/one-time-password.cabal
+++ b/one-time-password.cabal
@@ -21,7 +21,7 @@ build-type:         Simple
 extra-source-files: README.md
 extra-doc-files:    CHANGELOG.md
 tested-with:
-  GHC ==9.4.8 || ==9.6.4 || ==9.6.7 || ==9.8.2 || ==9.8.4 || ==9.10.2
+  GHC ==9.4.8 || ==9.6.4 || ==9.6.7 || ==9.8.2 || ==9.8.4 || ==9.10.3 || ==9.12.2 || ==9.14.1
 
 source-repository head
   type:     git
